First attempt to use the autotools bullshit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.o
 prwd
 Makefile
+.deps/
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+src/.deps/
+src/Makefile.in
+etc/
