--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -522,6 +522,14 @@ dist-hook:
 	grep "^#found_debug=" configure
 	find $(distdir) -name .svn -type d|xargs rm -Rf
 
+prwd_tests: main.c wcslcpy.o strdelim.o strlcpy.o test.c
+	$(CC) ${CFLAGS} -D VERSION=\"test\" -D TESTING -c main.c -o main.o
+	$(CC) ${CFLAGS} -c test.c -o test.o
+	$(CC) -ggdb -o run_tests main.o wcslcpy.o strdelim.o strlcpy.o test.o
+
+test: prwd_tests
+	./run_tests
+
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
