--- a/Makefile.src
+++ b/Makefile.src
@@ -1,3 +1,5 @@
+DESTDIR?=${PREFIX}
+
 all: src/prwd
 
 src/prwd:
@@ -7,8 +9,9 @@ test:
 	cd src/ && make test
 
 install: src/prwd
-	install -m 755 src/prwd ${PREFIX}/bin
-	install -m 644 prwd.1 ${PREFIX}/man/man1
+	install -m 755 src/prwd ${DESTDIR}/bin
+	install -d ${DESTDIR}/man/man1
+	install -m 644 prwd.1 ${DESTDIR}/man/man1
 
 clean:
 	cd src/ && make clean
