Move aliases funcs to their own file.

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -1,16 +1,16 @@
 BINARY=prwd
 
-OBJECTS=main.o config.o strdelim.o utils.o
+OBJECTS=main.o config.o strdelim.o utils.o aliases.o
 OBJECTS+=${EXTRA_OBJECTS}
 
-CFLAGS?=--std=c99
+CFLAGS?=--std=c99 -Wall
 
 all: ${BINARY}
 
 ${BINARY}: ${OBJECTS}
 	$(CC) -o ${BINARY} ${OBJECTS}
 
-prwd_tests: main.c config.o strdelim.o test.c utils.c ${EXTRA_OBJECTS}
+prwd_tests: main.c config.o aliases.o strdelim.o test.c utils.c ${EXTRA_OBJECTS}
 	$(CC) ${CFLAGS} -D TESTING -c main.c -o main.o
 	$(CC) ${CFLAGS} -D TESTING -c utils.c -o utils.o
 	$(CC) ${CFLAGS} -c test.c -o test.o
