--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -1,6 +1,6 @@
 BINARY=prwd
 
-OBJECTS=main.o config.o strdelim.o utils.o aliases.o
+OBJECTS=main.o config.o strdelim.o utils.o alias.o
 OBJECTS+=${EXTRA_OBJECTS}
 
 CFLAGS?=--std=c99 -Wall
@@ -10,14 +10,15 @@ all: ${BINARY}
 ${BINARY}: ${OBJECTS}
 	$(CC) -o ${BINARY} ${OBJECTS}
 
-prwd_tests: main.c config.o aliases.o strdelim.o test.c utils.c ${EXTRA_OBJECTS}
-	$(CC) ${CFLAGS} -D TESTING -c main.c -o main.o
+prwd_tests: config.o alias.o strdelim.o test.c utils.c ${EXTRA_OBJECTS}
 	$(CC) ${CFLAGS} -D TESTING -c utils.c -o utils.o
-	$(CC) ${CFLAGS} -c test.c -o test.o
-	$(CC) -ggdb -O0 -o run_tests test.o ${OBJECTS}
+	$(CC) ${CFLAGS} -D TESTING -c test.c -o main.o
+	$(CC) -ggdb -O0 -o run_tests ${OBJECTS}
 
 test: prwd_tests
 	./run_tests.sh
 
 clean:
 	rm -f ${BINARY} ${OBJECTS}
+
+.PHONY: clean test all
