--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -1,7 +1,7 @@
 BINARY=prwd
 
 OBJECTS=main.o config.o strdelim.o utils.o alias.o cut.o newsgroupize.o \
-	hostname.o uid.o vcs.o
+	hostname.o uid.o vcs.o tokenize.o
 OBJECTS+=${EXTRA_OBJECTS}
 
 CFLAGS?=--std=c99 -Wall
