--- a/afl/Makefile.src
+++ b/afl/Makefile.src
@@ -1,14 +1,16 @@
+AFL_CFLAGS=-I../src
 CC=afl-gcc
 
 all:
 	@echo "AFL runs should run separately, read the Makefile"
 
-template:
-	cd ../src && make clean all
-	cp ../src/*.o .
-	cp ../src/*.h .
-	$(CC) ${CFLAGS} -c template.c -o main.o
-	$(CC) ${CFLAGS} ${LDFLAGS} -o template ${OBJECTS}
+obj:
+	cd ../src && CFLAGS="${AFL_CFLAGS}" CC="${CC}" make clean obj
+	rm -f ../src/main.o
+
+template: obj
+	$(CC) ${AFL_CFLAGS} ${CFLAGS} -c template.c -o main.o
+	$(CC) ${CFLAGS} ${LDFLAGS} -o template ../src/*.o main.o
 
 run-template: template
 	mkdir -p findings/templates
