--- a/prwdrc.example
+++ b/prwdrc.example
@@ -1,23 +1,8 @@
-# prwd config file example
+# prwd config file example (~/.prwdrc)
 
-# Maximum size of the returned working directory
-set maxlength 24
-set filler "…"
-set cleancut on
-
-# Shorten the path newsgroup style (first letters)
-#set newsgroup on
-
-# Show mercurial and git branches
-#set mercurial on
-#set git on
-
-# Prefix the result with the short hostname.
-#set hostname on
-
-# Add a suffix character UID hint ($ or #).
-#set uid_indicator on
+# Shell prompt template
+template "${date} ${hostname}:${branch}:${path -l 24}${uid} "
 
 # Aliases
-alias *lt /home/tamentis/livetech
-alias *svn /home/tamentis/dev/trunk
+alias $prwd /home/tamentis/projects/prwd
+alias $www /var/www/htdocs
